<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpFragment">

    <ProgressBar
        android:id="@+id/progress_bar_fragment_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll_view_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_view_sign_up_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:gravity="center"
                android:text="@string/sign_up_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_spacing"
                android:gravity="start|top"
                android:hint="@string/name"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_sign_up_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_field_name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                tools:text="Max" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_spacing"
                android:gravity="start|top"
                android:hint="@string/sign_login"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_field_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_field_login"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    tools:text="Max_2004" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_spacing"
                android:gravity="start|top"
                android:hint="@string/sign_password"
                android:inputType="textPassword"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_field_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_field_password"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    tools:text="Qwerty@123" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_spacing"
                android:gravity="start|top"
                android:hint="@string/sign_repeat_password"
                android:inputType="textPassword"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_field_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_field_repeat_password"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    tools:text="Qwerty@123" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/buttonPanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_field_repeat_password">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pickPhoto"
                    style="@style/Widget.AppTheme.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_select_photo"
                    android:padding="@dimen/common_spacing"
                    app:icon="@drawable/ic_photo_24dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/takePhoto"
                    style="@style/Widget.AppTheme.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_take_photo"
                    android:padding="@dimen/common_spacing"
                    app:icon="@drawable/ic_camera_24dp" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_spacing"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonPanel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>